# botaermentator

./: .dockerignore  .env.example  .gitignore  CURSOR_INSTRUCTIONS_MVP_TELEGRAM_TIMEWEB.md  Dockerfile  README.md  pyproject.toml
app/: __init__.py  config.py  logging.py  main.py
app/agents/: base.py  context_relation.py  industry_filter.py  main_expert.py  schemas.py  timeweb_client.py
app/api/: health.py  telegram_webhook.py
app/bot/: factory.py  mention.py
app/bot/formatting/: telegram_html.py
app/bot/routers/: admin.py  group_questions.py  membership.py  private_messages.py
app/db/: session.py  ssl.py
app/db/models/: __init__.py  entities.py
app/db/repositories/: __init__.py
app/domain/: __init__.py  enums.py  messages.py
app/prompts/: agent_1_industry_filter.md  agent_2_context_relation.md  agent_3_main_expert.md
app/services/: blocking_service.py  question_service.py  rate_limit_service.py  request_gate.py  session_service.py  usage_service.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  TIMEWEB_SETUP.md
migrations/: env.py
migrations/versions/: 001_initial.py
scripts/: block_session.py  block_user.py  delete_webhook.py  docker-entrypoint.sh  set_webhook.py  start.sh  unblock_session.py  unblock_user.py
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_db_ssl.py  test_formatting.py  test_health.py  test_mention.py  test_rate_limits.py  test_request_gate.py  test_sessions.py  test_webhook.py
